[package]
name = "deterministic-keygen"
version = "0.0.7"
edition = "2021"
description = "Deterministic key-generator"
readme = "README.md"
license = "MIT"
repository = "https://github.com/crwood/deterministic-keygen"
keywords = [
    "deterministic",
    "key-generator",
    "bip39",
    "rsa",
]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "deterministic_keygen"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.0"
blake3 = "1.5.0"
lafs = "0.0.1"
pyo3 = "0.22.2"
rand_chacha = "0.3.1"
# For compatibility with pkcs8-0.11: https://github.com/RustCrypto/RSA/pull/446
rsa = { git = "https://github.com/RustCrypto/RSA.git", rev = "aeedb5adf5297892fcb9e11f7c0f6c0157005c58" }

tiny-bip39 = "1.0.0"

[dev-dependencies]
rand = "0.8.5"
