[package]
name = "deterministic-keygen"
version = "0.0.7"
edition = "2021"
description = "Deterministic key-generator"
readme = "README.md"
license = "MIT"
repository = "https://github.com/crwood/deterministic-keygen"
keywords = [
    "deterministic",
    "key-generator",
    "bip39",
    "rsa",
]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "deterministic_keygen"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.89"
blake3 = "1.5.4"
pyo3 = "0.22.3"
rand_chacha = "0.3.1"
rsa = "0.9.6"
tiny-bip39 = "1.0.0"

[dev-dependencies]
rand = "0.8.5"
