[package]
name = "deterministic-keygen"
version = "0.0.7"
edition = "2021"
description = "Deterministic key-generator"
readme = "README.md"
license = "MIT"
repository = "https://github.com/crwood/deterministic-keygen"
keywords = [
    "deterministic",
    "key-generator",
    "bip39",
    "rsa",
]
categories = ["cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "deterministic_keygen"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.97"
blake3 = "1.6.1"
pyo3 = "0.23.5"
rand_chacha = "0.3.1"
rsa = "0.9.7"
tiny-bip39 = "1.0.0"

[dev-dependencies]
# rsa does not yet support rand 0.9: https://github.com/RustCrypto/RSA/issues/466
rand = "0.8.5"
