[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "deterministic-keygen"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]


[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.0
env_list = py{38,39,310,311,312}
skip_missing_interpreters = True

[testenv]
deps = pytest
commands = {env_python} -m pytest --verbose --capture=no tests {posargs}
"""
