[package]
name = "lafs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin_hashes = "0.14.0"
data-encoding = "2.6.0"
rsa = "0.10.0-pre.1"

[dev-dependencies]
rand = "0.8.5"
serde = "1.0"
serde_yaml = "0.9"
